// Protos/Tests/SwiftProtobufTests/unittest_swift_oneof_switch_split.proto
// Test for switch statement splitting in oneof traverse generation
//
// This source file is part of the Swift.org open source project
//
// Copyright (c) 2014 - 2025 Apple Inc. and the Swift project authors
// Licensed under Apache License v2.0 with Runtime Library Exception
//
// See http://swift.org/LICENSE.txt for license information
// See http://swift.org/CONTRIBUTORS.txt for the list of Swift project authors
//
// -----------------------------------------------------------------------------
///
/// This message tests oneof switch splitting with interleaved non-oneof fields.
/// - Regular fields at 2, 251, 502, and 509 break oneof into multiple chunks
/// - Regular field at 2 creates first break
/// - Regular field at 251 creates second break
/// - Regular field at 502 creates third break
/// - Regular field at 509 creates fourth break
/// - The oneof fields are also reordered to test proper sorting in generated code
///
// -----------------------------------------------------------------------------

syntax = "proto2";

package swift_proto_testing.switch_split;

message SwitchSplitMessage {
  // Regular fields that split the oneof into chunks
  optional int32 regular_field_002 = 2;
  optional int32 regular_field_251 = 251;
  optional int32 regular_field_502 = 502;
  optional int32 regular_field_509 = 509;

  oneof value {
    int32 field_001 = 1;
    int32 field_003 = 3;
    int32 field_004 = 4;
    int32 field_005 = 5;
    int32 field_006 = 6;
    int32 field_007 = 7;
    int32 field_008 = 8;
    int32 field_009 = 9;
    int32 field_010 = 50;
    int32 field_011 = 11;
    int32 field_012 = 12;
    int32 field_013 = 13;
    int32 field_014 = 14;
    int32 field_015 = 15;
    int32 field_016 = 16;
    int32 field_017 = 17;
    int32 field_018 = 18;
    int32 field_019 = 19;
    int32 field_020 = 20;
    int32 field_021 = 21;
    int32 field_022 = 22;
    int32 field_023 = 23;
    int32 field_024 = 24;
    int32 field_025 = 25;
    int32 field_026 = 26;
    int32 field_027 = 27;
    int32 field_028 = 28;
    int32 field_029 = 29;
    int32 field_030 = 30;
    int32 field_031 = 31;
    int32 field_032 = 32;
    int32 field_033 = 33;
    int32 field_034 = 34;
    int32 field_035 = 35;
    int32 field_036 = 36;
    int32 field_037 = 37;
    int32 field_038 = 38;
    int32 field_039 = 39;
    int32 field_040 = 40;
    int32 field_041 = 41;
    int32 field_042 = 42;
    int32 field_043 = 43;
    int32 field_044 = 44;
    int32 field_045 = 45;
    int32 field_046 = 46;
    int32 field_047 = 47;
    int32 field_048 = 48;
    int32 field_049 = 49;
    int32 field_050 = 10;
    int32 field_051 = 51;
    int32 field_052 = 52;
    int32 field_053 = 53;
    int32 field_054 = 54;
    int32 field_055 = 55;
    int32 field_056 = 56;
    int32 field_057 = 57;
    int32 field_058 = 58;
    int32 field_059 = 59;
    int32 field_060 = 60;
    int32 field_061 = 61;
    int32 field_062 = 62;
    int32 field_063 = 63;
    int32 field_064 = 64;
    int32 field_065 = 65;
    int32 field_066 = 66;
    int32 field_067 = 67;
    int32 field_068 = 68;
    int32 field_069 = 69;
    int32 field_070 = 70;
    int32 field_071 = 71;
    int32 field_072 = 72;
    int32 field_073 = 73;
    int32 field_074 = 74;
    int32 field_075 = 75;
    int32 field_076 = 76;
    int32 field_077 = 77;
    int32 field_078 = 78;
    int32 field_079 = 79;
    int32 field_080 = 80;
    int32 field_081 = 81;
    int32 field_082 = 82;
    int32 field_083 = 83;
    int32 field_084 = 84;
    int32 field_085 = 85;
    int32 field_086 = 86;
    int32 field_087 = 87;
    int32 field_088 = 88;
    int32 field_089 = 89;
    int32 field_090 = 90;
    int32 field_091 = 91;
    int32 field_092 = 92;
    int32 field_093 = 93;
    int32 field_094 = 94;
    int32 field_095 = 95;
    int32 field_096 = 96;
    int32 field_097 = 97;
    int32 field_098 = 98;
    int32 field_099 = 99;
    int32 field_100 = 200;
    int32 field_101 = 101;
    int32 field_102 = 102;
    int32 field_103 = 103;
    int32 field_104 = 104;
    int32 field_105 = 105;
    int32 field_106 = 106;
    int32 field_107 = 107;
    int32 field_108 = 108;
    int32 field_109 = 109;
    int32 field_110 = 110;
    int32 field_111 = 111;
    int32 field_112 = 112;
    int32 field_113 = 113;
    int32 field_114 = 114;
    int32 field_115 = 115;
    int32 field_116 = 116;
    int32 field_117 = 117;
    int32 field_118 = 118;
    int32 field_119 = 119;
    int32 field_120 = 120;
    int32 field_121 = 121;
    int32 field_122 = 122;
    int32 field_123 = 123;
    int32 field_124 = 124;
    int32 field_125 = 125;
    int32 field_126 = 126;
    int32 field_127 = 127;
    int32 field_128 = 128;
    int32 field_129 = 129;
    int32 field_130 = 130;
    int32 field_131 = 131;
    int32 field_132 = 132;
    int32 field_133 = 133;
    int32 field_134 = 134;
    int32 field_135 = 135;
    int32 field_136 = 136;
    int32 field_137 = 137;
    int32 field_138 = 138;
    int32 field_139 = 139;
    int32 field_140 = 140;
    int32 field_141 = 141;
    int32 field_142 = 142;
    int32 field_143 = 143;
    int32 field_144 = 144;
    int32 field_145 = 145;
    int32 field_146 = 146;
    int32 field_147 = 147;
    int32 field_148 = 148;
    int32 field_149 = 149;
    int32 field_150 = 150;
    int32 field_151 = 151;
    int32 field_152 = 152;
    int32 field_153 = 153;
    int32 field_154 = 154;
    int32 field_155 = 155;
    int32 field_156 = 156;
    int32 field_157 = 157;
    int32 field_158 = 158;
    int32 field_159 = 159;
    int32 field_160 = 160;
    int32 field_161 = 161;
    int32 field_162 = 162;
    int32 field_163 = 163;
    int32 field_164 = 164;
    int32 field_165 = 165;
    int32 field_166 = 166;
    int32 field_167 = 167;
    int32 field_168 = 168;
    int32 field_169 = 169;
    int32 field_170 = 170;
    int32 field_171 = 171;
    int32 field_172 = 172;
    int32 field_173 = 173;
    int32 field_174 = 174;
    int32 field_175 = 175;
    int32 field_176 = 176;
    int32 field_177 = 177;
    int32 field_178 = 178;
    int32 field_179 = 179;
    int32 field_180 = 180;
    int32 field_181 = 181;
    int32 field_182 = 182;
    int32 field_183 = 183;
    int32 field_184 = 184;
    int32 field_185 = 185;
    int32 field_186 = 186;
    int32 field_187 = 187;
    int32 field_188 = 188;
    int32 field_189 = 189;
    int32 field_190 = 190;
    int32 field_191 = 191;
    int32 field_192 = 192;
    int32 field_193 = 193;
    int32 field_194 = 194;
    int32 field_195 = 195;
    int32 field_196 = 196;
    int32 field_197 = 197;
    int32 field_198 = 198;
    int32 field_199 = 199;
    int32 field_200 = 100;
    int32 field_201 = 201;
    int32 field_202 = 202;
    int32 field_203 = 203;
    int32 field_204 = 204;
    int32 field_205 = 205;
    int32 field_206 = 206;
    int32 field_207 = 207;
    int32 field_208 = 208;
    int32 field_209 = 209;
    int32 field_210 = 210;
    int32 field_211 = 211;
    int32 field_212 = 212;
    int32 field_213 = 213;
    int32 field_214 = 214;
    int32 field_215 = 215;
    int32 field_216 = 216;
    int32 field_217 = 217;
    int32 field_218 = 218;
    int32 field_219 = 219;
    int32 field_220 = 220;
    int32 field_221 = 221;
    int32 field_222 = 222;
    int32 field_223 = 223;
    int32 field_224 = 224;
    int32 field_225 = 225;
    int32 field_226 = 226;
    int32 field_227 = 227;
    int32 field_228 = 228;
    int32 field_229 = 229;
    int32 field_230 = 230;
    int32 field_231 = 231;
    int32 field_232 = 232;
    int32 field_233 = 233;
    int32 field_234 = 234;
    int32 field_235 = 235;
    int32 field_236 = 236;
    int32 field_237 = 237;
    int32 field_238 = 238;
    int32 field_239 = 239;
    int32 field_240 = 240;
    int32 field_241 = 241;
    int32 field_242 = 242;
    int32 field_243 = 243;
    int32 field_244 = 244;
    int32 field_245 = 245;
    int32 field_246 = 246;
    int32 field_247 = 247;
    int32 field_248 = 248;
    int32 field_249 = 249;
    int32 field_250 = 250;
    int32 field_252 = 252;
    int32 field_253 = 253;
    int32 field_254 = 254;
    int32 field_255 = 255;
    int32 field_256 = 256;
    int32 field_257 = 257;
    int32 field_258 = 258;
    int32 field_259 = 259;
    int32 field_260 = 260;
    int32 field_261 = 261;
    int32 field_262 = 262;
    int32 field_263 = 263;
    int32 field_264 = 264;
    int32 field_265 = 265;
    int32 field_266 = 266;
    int32 field_267 = 267;
    int32 field_268 = 268;
    int32 field_269 = 269;
    int32 field_270 = 270;
    int32 field_271 = 271;
    int32 field_272 = 272;
    int32 field_273 = 273;
    int32 field_274 = 274;
    int32 field_275 = 275;
    int32 field_276 = 276;
    int32 field_277 = 277;
    int32 field_278 = 278;
    int32 field_279 = 279;
    int32 field_280 = 280;
    int32 field_281 = 281;
    int32 field_282 = 282;
    int32 field_283 = 283;
    int32 field_284 = 284;
    int32 field_285 = 285;
    int32 field_286 = 286;
    int32 field_287 = 287;
    int32 field_288 = 288;
    int32 field_289 = 289;
    int32 field_290 = 290;
    int32 field_291 = 291;
    int32 field_292 = 292;
    int32 field_293 = 293;
    int32 field_294 = 294;
    int32 field_295 = 295;
    int32 field_296 = 296;
    int32 field_297 = 297;
    int32 field_298 = 298;
    int32 field_299 = 299;
    int32 field_300 = 400;
    int32 field_301 = 301;
    int32 field_302 = 302;
    int32 field_303 = 303;
    int32 field_304 = 304;
    int32 field_305 = 305;
    int32 field_306 = 306;
    int32 field_307 = 307;
    int32 field_308 = 308;
    int32 field_309 = 309;
    int32 field_310 = 310;
    int32 field_311 = 311;
    int32 field_312 = 312;
    int32 field_313 = 313;
    int32 field_314 = 314;
    int32 field_315 = 315;
    int32 field_316 = 316;
    int32 field_317 = 317;
    int32 field_318 = 318;
    int32 field_319 = 319;
    int32 field_320 = 320;
    int32 field_321 = 321;
    int32 field_322 = 322;
    int32 field_323 = 323;
    int32 field_324 = 324;
    int32 field_325 = 325;
    int32 field_326 = 326;
    int32 field_327 = 327;
    int32 field_328 = 328;
    int32 field_329 = 329;
    int32 field_330 = 330;
    int32 field_331 = 331;
    int32 field_332 = 332;
    int32 field_333 = 333;
    int32 field_334 = 334;
    int32 field_335 = 335;
    int32 field_336 = 336;
    int32 field_337 = 337;
    int32 field_338 = 338;
    int32 field_339 = 339;
    int32 field_340 = 340;
    int32 field_341 = 341;
    int32 field_342 = 342;
    int32 field_343 = 343;
    int32 field_344 = 344;
    int32 field_345 = 345;
    int32 field_346 = 346;
    int32 field_347 = 347;
    int32 field_348 = 348;
    int32 field_349 = 349;
    int32 field_350 = 350;
    int32 field_351 = 351;
    int32 field_352 = 352;
    int32 field_353 = 353;
    int32 field_354 = 354;
    int32 field_355 = 355;
    int32 field_356 = 356;
    int32 field_357 = 357;
    int32 field_358 = 358;
    int32 field_359 = 359;
    int32 field_360 = 360;
    int32 field_361 = 361;
    int32 field_362 = 362;
    int32 field_363 = 363;
    int32 field_364 = 364;
    int32 field_365 = 365;
    int32 field_366 = 366;
    int32 field_367 = 367;
    int32 field_368 = 368;
    int32 field_369 = 369;
    int32 field_370 = 370;
    int32 field_371 = 371;
    int32 field_372 = 372;
    int32 field_373 = 373;
    int32 field_374 = 374;
    int32 field_375 = 375;
    int32 field_376 = 376;
    int32 field_377 = 377;
    int32 field_378 = 378;
    int32 field_379 = 379;
    int32 field_380 = 380;
    int32 field_381 = 381;
    int32 field_382 = 382;
    int32 field_383 = 383;
    int32 field_384 = 384;
    int32 field_385 = 385;
    int32 field_386 = 386;
    int32 field_387 = 387;
    int32 field_388 = 388;
    int32 field_389 = 389;
    int32 field_390 = 390;
    int32 field_391 = 391;
    int32 field_392 = 392;
    int32 field_393 = 393;
    int32 field_394 = 394;
    int32 field_395 = 395;
    int32 field_396 = 396;
    int32 field_397 = 397;
    int32 field_398 = 398;
    int32 field_399 = 399;
    int32 field_400 = 300;
    int32 field_401 = 401;
    int32 field_402 = 402;
    int32 field_403 = 403;
    int32 field_404 = 404;
    int32 field_405 = 405;
    int32 field_406 = 406;
    int32 field_407 = 407;
    int32 field_408 = 408;
    int32 field_409 = 409;
    int32 field_410 = 410;
    int32 field_411 = 411;
    int32 field_412 = 412;
    int32 field_413 = 413;
    int32 field_414 = 414;
    int32 field_415 = 415;
    int32 field_416 = 416;
    int32 field_417 = 417;
    int32 field_418 = 418;
    int32 field_419 = 419;
    int32 field_420 = 420;
    int32 field_421 = 421;
    int32 field_422 = 422;
    int32 field_423 = 423;
    int32 field_424 = 424;
    int32 field_425 = 425;
    int32 field_426 = 426;
    int32 field_427 = 427;
    int32 field_428 = 428;
    int32 field_429 = 429;
    int32 field_430 = 430;
    int32 field_431 = 431;
    int32 field_432 = 432;
    int32 field_433 = 433;
    int32 field_434 = 434;
    int32 field_435 = 435;
    int32 field_436 = 436;
    int32 field_437 = 437;
    int32 field_438 = 438;
    int32 field_439 = 439;
    int32 field_440 = 440;
    int32 field_441 = 441;
    int32 field_442 = 442;
    int32 field_443 = 443;
    int32 field_444 = 444;
    int32 field_445 = 445;
    int32 field_446 = 446;
    int32 field_447 = 447;
    int32 field_448 = 448;
    int32 field_449 = 449;
    int32 field_450 = 450;
    int32 field_451 = 451;
    int32 field_452 = 452;
    int32 field_453 = 453;
    int32 field_454 = 454;
    int32 field_455 = 455;
    int32 field_456 = 456;
    int32 field_457 = 457;
    int32 field_458 = 458;
    int32 field_459 = 459;
    int32 field_460 = 460;
    int32 field_461 = 461;
    int32 field_462 = 462;
    int32 field_463 = 463;
    int32 field_464 = 464;
    int32 field_465 = 465;
    int32 field_466 = 466;
    int32 field_467 = 467;
    int32 field_468 = 468;
    int32 field_469 = 469;
    int32 field_470 = 470;
    int32 field_471 = 471;
    int32 field_472 = 472;
    int32 field_473 = 473;
    int32 field_474 = 474;
    int32 field_475 = 475;
    int32 field_476 = 476;
    int32 field_477 = 477;
    int32 field_478 = 478;
    int32 field_479 = 479;
    int32 field_480 = 480;
    int32 field_481 = 481;
    int32 field_482 = 482;
    int32 field_483 = 483;
    int32 field_484 = 484;
    int32 field_485 = 485;
    int32 field_486 = 486;
    int32 field_487 = 487;
    int32 field_488 = 488;
    int32 field_489 = 489;
    int32 field_490 = 490;
    int32 field_491 = 491;
    int32 field_492 = 492;
    int32 field_493 = 493;
    int32 field_494 = 494;
    int32 field_495 = 495;
    int32 field_496 = 496;
    int32 field_497 = 497;
    int32 field_498 = 498;
    int32 field_499 = 499;
    int32 field_500 = 500;
    int32 field_501 = 501;
    int32 field_503 = 503;
    int32 field_504 = 504;
    int32 field_505 = 505;
    int32 field_506 = 506;
    int32 field_507 = 507;
    int32 field_508 = 508;
    int32 field_510 = 510;
  }
}
